<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="EventReport_Typ" Id="{75630230-b7df-014a-2d9f-c22fa150e449}">
    <Declaration><![CDATA[TYPE EventReport_Typ :
STRUCT
	EventID:STRING;
	SubsysID:eSubsystemID;
	FlowID:DINT;
	SequentialID:DINT;
	EventType:STRING;
	MotorID:eMotorID;
	SensorID:eSensorID;
	VendorNameID:eVendorNameID;
	VendorErrorCode:DINT;
	IntParam1:DINT;
	IntParam2:DINT;
	RealParam1:REAL;	
	RealParam2:REAL;
	StringParam:STRING[64];	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>